Add placeholder to the input element

--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <li>Water</li>
     <li>Being told off</li>
   </ol>
-  <input type="text">
+  <input type="text" placeholder ="cat photo URL">
 </main>
