--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     <li>Water</li>
     <li>Being told off</li>
   </ol>
-  <input type="text" placeholder ="cat photo URL">
+  <form action="/submit-cat-photo"><input type="text" placeholder="cat photo URL"></form>
 </main>
