Add button to form element

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <li>Water</li>
     <li>Being told off</li>
   </ol>
-  <form action="/submit-cat-photo"><input type="text" placeholder="cat photo URL"></form>
+  <form action="/submit-cat-photo">
+    <input type="text" placeholder="cat photo URL">
+    <button type="submit">Submit</button>
+  </form>
 </main>
