Add set of checkboxes

--- a/index.html
+++ b/index.html
@@ -25,5 +25,14 @@
     <label for="outdoor">
       <input id="outdoor" type="radio" name="indoor-outdoor">Outdoor
     </label>
+    <label for="loving">
+      <input id="loving" type="checkbox" name="personality">Loving
+    </label>
+    <label for="cuddly">
+      <input id="cuddly" type ="checkbox" name="personality">Cuddly
+    </label>
+    <label for="playful">
+      <input id="playful" type="checkbox" name="personality">Playful
+    </label>
   </form>
 </main>
