--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <input type="text" placeholder="cat photo URL">
     <button type="submit">Submit</button>
     <label for="indoor">
-      <input id="indoor" type="radio" name="indoor-outdoor">Indoor
+      <input id="indoor" type="radio" name="indoor-outdoor" checked>Indoor
     </label>
     <label for="outdoor">
       <input id="outdoor" type="radio" name="indoor-outdoor">Outdoor
     </label>
     <label for="loving">
-      <input id="loving" type="checkbox" name="personality">Loving
+      <input id="loving" type="checkbox" name="personality" checked>Loving
     </label>
     <label for="cuddly">
       <input id="cuddly" type ="checkbox" name="personality">Cuddly
