--- a/index.html
+++ b/index.html
@@ -1,42 +1,67 @@
-<!DOCTYPE html>
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 
-<html>
-<h2>CatPhotoApp</h2>
+<style>
+  .red-text {
+    color: red;
+  }
+
+  h2 {
+    font-family: Lobster, monospace;
+  }
+
+  p {
+    font-size: 16px;
+    font-family: monospace;
+  }
+
+  .thick-green-border {
+    border-color: green;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 50%;
+  }
+
+  .smaller-image {
+    width: 100px;
+  }
+
+  .silver-background {
+    background-color: silver;
+  }
+
+  #cat-photo-form {
+    background-color: green;
+  }
+</style>
+
+<h2 class="red-text">CatPhotoApp</h2>
 <main>
-  <p>Click here to view more <a href="#">cat photos</a>.</p>
+  <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
   
-  <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
   
-  <p>Things cats love:</p>
-  <ul>
-    <li>cat nip</li>
-    <li>laser pointers</li>
-    <li>lasagna</li>
-  </ul>
-  <p>Top 3 things cats hate:</p>
-  <ol>
-    <li>Dogs</li>
-    <li>Water</li>
-    <li>Being told off</li>
-  </ol>
-  <form action="/submit-cat-photo">
-    <input type="text" placeholder="cat photo URL">
+  <div class="silver-background">
+    <p>Things cats love:</p>
+    <ul>
+      <li>cat nip</li>
+      <li>laser pointers</li>
+      <li>lasagna</li>
+    </ul>
+    <p>Top 3 things cats hate:</p>
+    <ol>
+      <li>flea treatment</li>
+      <li>thunder</li>
+      <li>other cats</li>
+    </ol>
+  </div>
+  
+  <form action="/submit-cat-photo" id="cat-photo-form">
+    <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
+    <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
+    <label><input type="checkbox" name="personality" checked> Loving</label>
+    <label><input type="checkbox" name="personality"> Lazy</label>
+    <label><input type="checkbox" name="personality"> Energetic</label><br>
+    <input type="text" placeholder="cat photo URL" required>
     <button type="submit">Submit</button>
-    <label for="indoor">
-      <input id="indoor" type="radio" name="indoor-outdoor" checked>Indoor
-    </label>
-    <label for="outdoor">
-      <input id="outdoor" type="radio" name="indoor-outdoor">Outdoor
-    </label>
-    <label for="loving">
-      <input id="loving" type="checkbox" name="personality" checked>Loving
-    </label>
-    <label for="cuddly">
-      <input id="cuddly" type ="checkbox" name="personality">Cuddly
-    </label>
-    <label for="playful">
-      <input id="playful" type="checkbox" name="personality">Playful
-    </label>
   </form>
 </main>
-</html>
