--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 
   h2 {
     font-family: Lobster, monospace;
+    text-align: center;
   }
 
   p {
     font-size: 16px;
     font-family: monospace;
+    text-align: justify;
   }
 
   .thick-green-border {
