--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   h2 {
     font-family: Lobster, monospace;
+    font-weight: bold;
     text-align: center;
   }
 
@@ -18,7 +19,7 @@
 
   .thick-green-border {
     border-color: green;
-    border-width: 10px;
+    border-width: 5px;
     border-style: solid;
     border-radius: 50%;
   }
