--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     font-weight: bold;
     text-align: center;
     font-size: 25px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
 
   p {
