--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     text-align: center;
     font-size: 25px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-    text-transform: uppercase;
+  }
+  
+  h2:hover {
+    color: blue;
   }
 
   p {
