--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     color: #FF007D;
   }
 
-  .thick-green-border {
-    border-color: green;
+  .thick-teal-border {
+    border-color: #09A7A1;
     border-width: 15px;
     border-style: solid;
     border-radius: 40%;
@@ -48,7 +48,7 @@
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
   
-  <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+  <a href="#"><img class="smaller-image thick-teal-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
   
   <div class="silver-background">
     <p>Things cats love:</p>
