Added a figure element for the image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 <main>
   <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
   
+  <figure>
   <a href="#"><img class="smaller-image thick-teal-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+    <figcaption>A cute orange cat lying on its back.</figcaption> 
+  </figure>  
   
   <div class="silver-background">
     <p>Things cats love:</p>
