Added radio buttons with fieldset and legend tags

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
     </ol>
   </div>
   
+  <fieldset>
+        <legend>How did you get your cat?</legend>
+        <input id="adopted" type="radio" name="levels" value="adopted">
+        <label for="adopted">Adopted</label><br>
+        <input id="shopped" type="radio" name="levels" value="shopped">
+        <label for="shopped">Shopped</label><br>
+  </fieldset>
+  
   <form action="/submit-cat-photo" id="cat-photo-form">
     <label><input type="radio" name="indoor-outdoor" checked> Indoor</label>
     <label><input type="radio" name="indoor-outdoor"> Outdoor</label><br>
