--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
     <label><input type="checkbox" name="personality" checked> Loving</label>
     <label><input type="checkbox" name="personality"> Lazy</label>
     <label><input type="checkbox" name="personality"> Energetic</label><br>
+    <p>Tell us your cat's birthday</p>
+        <label for="birthday">Birthday:</label>
+        <input type="date" id="birthday" name="date">
+        <input type="submit" name="submit" value="Submit">
     <input type="text" placeholder="cat photo URL" required>
     <button type="submit">Submit</button>
   </form>
